Fix head tags; Add SEO tags

--- a/public/index.html
+++ b/public/index.html
@@ -2,36 +2,45 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8" />
+
+        <!-- Load Meta Tags -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="" />
+        <meta name="keywords" content="digital, internet, chatbot, ariela, chat, pitch, sebrae, hackaton, megahack, marketing digital" />
 
         <title>Digitalize.me</title>
 
-        <link href="https://admin.chatcompose.com/static/PT/global/export/css/main.1b3f9fb9.css" rel="stylesheet"/>    
-        <script async type="text/javascript" src="https://admin.chatcompose.com/static/PT/global/export/js/main.c9ea3138.js" user="leomoraes-digitalizeme"></script>  
+        <!-- Load ChatBot -->
+        <link href="https://admin.chatcompose.com/static/PT/global/export/css/main.1b3f9fb9.css" rel="stylesheet"/>
+        <script async type="text/javascript" src="https://admin.chatcompose.com/static/PT/global/export/js/main.c9ea3138.js" user="leomoraes-digitalizeme" defer></script>
 
         <!-- Google Tag Manager -->
-        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-5KHW2JX');</script>
+        <script async type="text/javascript" defer>
+            (
+                function (w, d, s, l, i) {
+                    w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+                    var f = d.getElementsByTagName(s)[0],
+                        j = d.createElement(s),
+                        dl = l != 'dataLayer' ? '&l=' + l : '';
+                    j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+                    f.parentNode.insertBefore(j, f);
+                }
+            )(window, document, 'script', 'dataLayer', 'GTM-5KHW2JX');
+        </script>
         <!-- End Google Tag Manager -->
 
     </head>
 
     <body>
-
         <!-- Google Tag Manager (noscript) -->
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5KHW2JX"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <noscript>
+            <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5KHW2JX"
+                height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        </noscript>
         <!-- End Google Tag Manager (noscript) -->
 
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
     </body>
-
-    <link href="https://admin.chatcompose.com/static/land/main.c2b8f225.css" rel="stylesheet">    
-    <script async type="text/javascript" src="https://admin.chatcompose.com/static/PT/global/export/js/main.c9ea3138.js" user="leomoraes-digitalizeme" landing="true" lang="PT"></script> 
-
 
 </html>
